; ModuleID = '/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_cs_sha1_transform.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_cs_sha1_transform.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.char64long16 = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cs_sha1_transform(i64* %0, i8* %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca [1 x %union.char64long16], align 4
  store i64* %0, i64** %3, align 8
  store i8* %1, i8** %4, align 8
  %11 = getelementptr inbounds [1 x %union.char64long16], [1 x %union.char64long16]* %10, i64 0, i64 0
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 @memcpy(%union.char64long16* %11, i8* %12, i32 64)
  %14 = load i64*, i64** %3, align 8
  %15 = getelementptr inbounds i64, i64* %14, i64 0
  %16 = load i64, i64* %15, align 8
  store i64 %16, i64* %5, align 8
  %17 = load i64*, i64** %3, align 8
  %18 = getelementptr inbounds i64, i64* %17, i64 1
  %19 = load i64, i64* %18, align 8
  store i64 %19, i64* %6, align 8
  %20 = load i64*, i64** %3, align 8
  %21 = getelementptr inbounds i64, i64* %20, i64 2
  %22 = load i64, i64* %21, align 8
  store i64 %22, i64* %7, align 8
  %23 = load i64*, i64** %3, align 8
  %24 = getelementptr inbounds i64, i64* %23, i64 3
  %25 = load i64, i64* %24, align 8
  store i64 %25, i64* %8, align 8
  %26 = load i64*, i64** %3, align 8
  %27 = getelementptr inbounds i64, i64* %26, i64 4
  %28 = load i64, i64* %27, align 8
  store i64 %28, i64* %9, align 8
  %29 = load i64, i64* %5, align 8
  %30 = load i64, i64* %6, align 8
  %31 = load i64, i64* %7, align 8
  %32 = load i64, i64* %8, align 8
  %33 = load i64, i64* %9, align 8
  %34 = call i32 @R0(i64 %29, i64 %30, i64 %31, i64 %32, i64 %33, i32 0)
  %35 = load i64, i64* %9, align 8
  %36 = load i64, i64* %5, align 8
  %37 = load i64, i64* %6, align 8
  %38 = load i64, i64* %7, align 8
  %39 = load i64, i64* %8, align 8
  %40 = call i32 @R0(i64 %35, i64 %36, i64 %37, i64 %38, i64 %39, i32 1)
  %41 = load i64, i64* %8, align 8
  %42 = load i64, i64* %9, align 8
  %43 = load i64, i64* %5, align 8
  %44 = load i64, i64* %6, align 8
  %45 = load i64, i64* %7, align 8
  %46 = call i32 @R0(i64 %41, i64 %42, i64 %43, i64 %44, i64 %45, i32 2)
  %47 = load i64, i64* %7, align 8
  %48 = load i64, i64* %8, align 8
  %49 = load i64, i64* %9, align 8
  %50 = load i64, i64* %5, align 8
  %51 = load i64, i64* %6, align 8
  %52 = call i32 @R0(i64 %47, i64 %48, i64 %49, i64 %50, i64 %51, i32 3)
  %53 = load i64, i64* %6, align 8
  %54 = load i64, i64* %7, align 8
  %55 = load i64, i64* %8, align 8
  %56 = load i64, i64* %9, align 8
  %57 = load i64, i64* %5, align 8
  %58 = call i32 @R0(i64 %53, i64 %54, i64 %55, i64 %56, i64 %57, i32 4)
  %59 = load i64, i64* %5, align 8
  %60 = load i64, i64* %6, align 8
  %61 = load i64, i64* %7, align 8
  %62 = load i64, i64* %8, align 8
  %63 = load i64, i64* %9, align 8
  %64 = call i32 @R0(i64 %59, i64 %60, i64 %61, i64 %62, i64 %63, i32 5)
  %65 = load i64, i64* %9, align 8
  %66 = load i64, i64* %5, align 8
  %67 = load i64, i64* %6, align 8
  %68 = load i64, i64* %7, align 8
  %69 = load i64, i64* %8, align 8
  %70 = call i32 @R0(i64 %65, i64 %66, i64 %67, i64 %68, i64 %69, i32 6)
  %71 = load i64, i64* %8, align 8
  %72 = load i64, i64* %9, align 8
  %73 = load i64, i64* %5, align 8
  %74 = load i64, i64* %6, align 8
  %75 = load i64, i64* %7, align 8
  %76 = call i32 @R0(i64 %71, i64 %72, i64 %73, i64 %74, i64 %75, i32 7)
  %77 = load i64, i64* %7, align 8
  %78 = load i64, i64* %8, align 8
  %79 = load i64, i64* %9, align 8
  %80 = load i64, i64* %5, align 8
  %81 = load i64, i64* %6, align 8
  %82 = call i32 @R0(i64 %77, i64 %78, i64 %79, i64 %80, i64 %81, i32 8)
  %83 = load i64, i64* %6, align 8
  %84 = load i64, i64* %7, align 8
  %85 = load i64, i64* %8, align 8
  %86 = load i64, i64* %9, align 8
  %87 = load i64, i64* %5, align 8
  %88 = call i32 @R0(i64 %83, i64 %84, i64 %85, i64 %86, i64 %87, i32 9)
  %89 = load i64, i64* %5, align 8
  %90 = load i64, i64* %6, align 8
  %91 = load i64, i64* %7, align 8
  %92 = load i64, i64* %8, align 8
  %93 = load i64, i64* %9, align 8
  %94 = call i32 @R0(i64 %89, i64 %90, i64 %91, i64 %92, i64 %93, i32 10)
  %95 = load i64, i64* %9, align 8
  %96 = load i64, i64* %5, align 8
  %97 = load i64, i64* %6, align 8
  %98 = load i64, i64* %7, align 8
  %99 = load i64, i64* %8, align 8
  %100 = call i32 @R0(i64 %95, i64 %96, i64 %97, i64 %98, i64 %99, i32 11)
  %101 = load i64, i64* %8, align 8
  %102 = load i64, i64* %9, align 8
  %103 = load i64, i64* %5, align 8
  %104 = load i64, i64* %6, align 8
  %105 = load i64, i64* %7, align 8
  %106 = call i32 @R0(i64 %101, i64 %102, i64 %103, i64 %104, i64 %105, i32 12)
  %107 = load i64, i64* %7, align 8
  %108 = load i64, i64* %8, align 8
  %109 = load i64, i64* %9, align 8
  %110 = load i64, i64* %5, align 8
  %111 = load i64, i64* %6, align 8
  %112 = call i32 @R0(i64 %107, i64 %108, i64 %109, i64 %110, i64 %111, i32 13)
  %113 = load i64, i64* %6, align 8
  %114 = load i64, i64* %7, align 8
  %115 = load i64, i64* %8, align 8
  %116 = load i64, i64* %9, align 8
  %117 = load i64, i64* %5, align 8
  %118 = call i32 @R0(i64 %113, i64 %114, i64 %115, i64 %116, i64 %117, i32 14)
  %119 = load i64, i64* %5, align 8
  %120 = load i64, i64* %6, align 8
  %121 = load i64, i64* %7, align 8
  %122 = load i64, i64* %8, align 8
  %123 = load i64, i64* %9, align 8
  %124 = call i32 @R0(i64 %119, i64 %120, i64 %121, i64 %122, i64 %123, i32 15)
  %125 = load i64, i64* %9, align 8
  %126 = load i64, i64* %5, align 8
  %127 = load i64, i64* %6, align 8
  %128 = load i64, i64* %7, align 8
  %129 = load i64, i64* %8, align 8
  %130 = call i32 @R1(i64 %125, i64 %126, i64 %127, i64 %128, i64 %129, i32 16)
  %131 = load i64, i64* %8, align 8
  %132 = load i64, i64* %9, align 8
  %133 = load i64, i64* %5, align 8
  %134 = load i64, i64* %6, align 8
  %135 = load i64, i64* %7, align 8
  %136 = call i32 @R1(i64 %131, i64 %132, i64 %133, i64 %134, i64 %135, i32 17)
  %137 = load i64, i64* %7, align 8
  %138 = load i64, i64* %8, align 8
  %139 = load i64, i64* %9, align 8
  %140 = load i64, i64* %5, align 8
  %141 = load i64, i64* %6, align 8
  %142 = call i32 @R1(i64 %137, i64 %138, i64 %139, i64 %140, i64 %141, i32 18)
  %143 = load i64, i64* %6, align 8
  %144 = load i64, i64* %7, align 8
  %145 = load i64, i64* %8, align 8
  %146 = load i64, i64* %9, align 8
  %147 = load i64, i64* %5, align 8
  %148 = call i32 @R1(i64 %143, i64 %144, i64 %145, i64 %146, i64 %147, i32 19)
  %149 = load i64, i64* %5, align 8
  %150 = load i64, i64* %6, align 8
  %151 = load i64, i64* %7, align 8
  %152 = load i64, i64* %8, align 8
  %153 = load i64, i64* %9, align 8
  %154 = call i32 @R2(i64 %149, i64 %150, i64 %151, i64 %152, i64 %153, i32 20)
  %155 = load i64, i64* %9, align 8
  %156 = load i64, i64* %5, align 8
  %157 = load i64, i64* %6, align 8
  %158 = load i64, i64* %7, align 8
  %159 = load i64, i64* %8, align 8
  %160 = call i32 @R2(i64 %155, i64 %156, i64 %157, i64 %158, i64 %159, i32 21)
  %161 = load i64, i64* %8, align 8
  %162 = load i64, i64* %9, align 8
  %163 = load i64, i64* %5, align 8
  %164 = load i64, i64* %6, align 8
  %165 = load i64, i64* %7, align 8
  %166 = call i32 @R2(i64 %161, i64 %162, i64 %163, i64 %164, i64 %165, i32 22)
  %167 = load i64, i64* %7, align 8
  %168 = load i64, i64* %8, align 8
  %169 = load i64, i64* %9, align 8
  %170 = load i64, i64* %5, align 8
  %171 = load i64, i64* %6, align 8
  %172 = call i32 @R2(i64 %167, i64 %168, i64 %169, i64 %170, i64 %171, i32 23)
  %173 = load i64, i64* %6, align 8
  %174 = load i64, i64* %7, align 8
  %175 = load i64, i64* %8, align 8
  %176 = load i64, i64* %9, align 8
  %177 = load i64, i64* %5, align 8
  %178 = call i32 @R2(i64 %173, i64 %174, i64 %175, i64 %176, i64 %177, i32 24)
  %179 = load i64, i64* %5, align 8
  %180 = load i64, i64* %6, align 8
  %181 = load i64, i64* %7, align 8
  %182 = load i64, i64* %8, align 8
  %183 = load i64, i64* %9, align 8
  %184 = call i32 @R2(i64 %179, i64 %180, i64 %181, i64 %182, i64 %183, i32 25)
  %185 = load i64, i64* %9, align 8
  %186 = load i64, i64* %5, align 8
  %187 = load i64, i64* %6, align 8
  %188 = load i64, i64* %7, align 8
  %189 = load i64, i64* %8, align 8
  %190 = call i32 @R2(i64 %185, i64 %186, i64 %187, i64 %188, i64 %189, i32 26)
  %191 = load i64, i64* %8, align 8
  %192 = load i64, i64* %9, align 8
  %193 = load i64, i64* %5, align 8
  %194 = load i64, i64* %6, align 8
  %195 = load i64, i64* %7, align 8
  %196 = call i32 @R2(i64 %191, i64 %192, i64 %193, i64 %194, i64 %195, i32 27)
  %197 = load i64, i64* %7, align 8
  %198 = load i64, i64* %8, align 8
  %199 = load i64, i64* %9, align 8
  %200 = load i64, i64* %5, align 8
  %201 = load i64, i64* %6, align 8
  %202 = call i32 @R2(i64 %197, i64 %198, i64 %199, i64 %200, i64 %201, i32 28)
  %203 = load i64, i64* %6, align 8
  %204 = load i64, i64* %7, align 8
  %205 = load i64, i64* %8, align 8
  %206 = load i64, i64* %9, align 8
  %207 = load i64, i64* %5, align 8
  %208 = call i32 @R2(i64 %203, i64 %204, i64 %205, i64 %206, i64 %207, i32 29)
  %209 = load i64, i64* %5, align 8
  %210 = load i64, i64* %6, align 8
  %211 = load i64, i64* %7, align 8
  %212 = load i64, i64* %8, align 8
  %213 = load i64, i64* %9, align 8
  %214 = call i32 @R2(i64 %209, i64 %210, i64 %211, i64 %212, i64 %213, i32 30)
  %215 = load i64, i64* %9, align 8
  %216 = load i64, i64* %5, align 8
  %217 = load i64, i64* %6, align 8
  %218 = load i64, i64* %7, align 8
  %219 = load i64, i64* %8, align 8
  %220 = call i32 @R2(i64 %215, i64 %216, i64 %217, i64 %218, i64 %219, i32 31)
  %221 = load i64, i64* %8, align 8
  %222 = load i64, i64* %9, align 8
  %223 = load i64, i64* %5, align 8
  %224 = load i64, i64* %6, align 8
  %225 = load i64, i64* %7, align 8
  %226 = call i32 @R2(i64 %221, i64 %222, i64 %223, i64 %224, i64 %225, i32 32)
  %227 = load i64, i64* %7, align 8
  %228 = load i64, i64* %8, align 8
  %229 = load i64, i64* %9, align 8
  %230 = load i64, i64* %5, align 8
  %231 = load i64, i64* %6, align 8
  %232 = call i32 @R2(i64 %227, i64 %228, i64 %229, i64 %230, i64 %231, i32 33)
  %233 = load i64, i64* %6, align 8
  %234 = load i64, i64* %7, align 8
  %235 = load i64, i64* %8, align 8
  %236 = load i64, i64* %9, align 8
  %237 = load i64, i64* %5, align 8
  %238 = call i32 @R2(i64 %233, i64 %234, i64 %235, i64 %236, i64 %237, i32 34)
  %239 = load i64, i64* %5, align 8
  %240 = load i64, i64* %6, align 8
  %241 = load i64, i64* %7, align 8
  %242 = load i64, i64* %8, align 8
  %243 = load i64, i64* %9, align 8
  %244 = call i32 @R2(i64 %239, i64 %240, i64 %241, i64 %242, i64 %243, i32 35)
  %245 = load i64, i64* %9, align 8
  %246 = load i64, i64* %5, align 8
  %247 = load i64, i64* %6, align 8
  %248 = load i64, i64* %7, align 8
  %249 = load i64, i64* %8, align 8
  %250 = call i32 @R2(i64 %245, i64 %246, i64 %247, i64 %248, i64 %249, i32 36)
  %251 = load i64, i64* %8, align 8
  %252 = load i64, i64* %9, align 8
  %253 = load i64, i64* %5, align 8
  %254 = load i64, i64* %6, align 8
  %255 = load i64, i64* %7, align 8
  %256 = call i32 @R2(i64 %251, i64 %252, i64 %253, i64 %254, i64 %255, i32 37)
  %257 = load i64, i64* %7, align 8
  %258 = load i64, i64* %8, align 8
  %259 = load i64, i64* %9, align 8
  %260 = load i64, i64* %5, align 8
  %261 = load i64, i64* %6, align 8
  %262 = call i32 @R2(i64 %257, i64 %258, i64 %259, i64 %260, i64 %261, i32 38)
  %263 = load i64, i64* %6, align 8
  %264 = load i64, i64* %7, align 8
  %265 = load i64, i64* %8, align 8
  %266 = load i64, i64* %9, align 8
  %267 = load i64, i64* %5, align 8
  %268 = call i32 @R2(i64 %263, i64 %264, i64 %265, i64 %266, i64 %267, i32 39)
  %269 = load i64, i64* %5, align 8
  %270 = load i64, i64* %6, align 8
  %271 = load i64, i64* %7, align 8
  %272 = load i64, i64* %8, align 8
  %273 = load i64, i64* %9, align 8
  %274 = call i32 @R3(i64 %269, i64 %270, i64 %271, i64 %272, i64 %273, i32 40)
  %275 = load i64, i64* %9, align 8
  %276 = load i64, i64* %5, align 8
  %277 = load i64, i64* %6, align 8
  %278 = load i64, i64* %7, align 8
  %279 = load i64, i64* %8, align 8
  %280 = call i32 @R3(i64 %275, i64 %276, i64 %277, i64 %278, i64 %279, i32 41)
  %281 = load i64, i64* %8, align 8
  %282 = load i64, i64* %9, align 8
  %283 = load i64, i64* %5, align 8
  %284 = load i64, i64* %6, align 8
  %285 = load i64, i64* %7, align 8
  %286 = call i32 @R3(i64 %281, i64 %282, i64 %283, i64 %284, i64 %285, i32 42)
  %287 = load i64, i64* %7, align 8
  %288 = load i64, i64* %8, align 8
  %289 = load i64, i64* %9, align 8
  %290 = load i64, i64* %5, align 8
  %291 = load i64, i64* %6, align 8
  %292 = call i32 @R3(i64 %287, i64 %288, i64 %289, i64 %290, i64 %291, i32 43)
  %293 = load i64, i64* %6, align 8
  %294 = load i64, i64* %7, align 8
  %295 = load i64, i64* %8, align 8
  %296 = load i64, i64* %9, align 8
  %297 = load i64, i64* %5, align 8
  %298 = call i32 @R3(i64 %293, i64 %294, i64 %295, i64 %296, i64 %297, i32 44)
  %299 = load i64, i64* %5, align 8
  %300 = load i64, i64* %6, align 8
  %301 = load i64, i64* %7, align 8
  %302 = load i64, i64* %8, align 8
  %303 = load i64, i64* %9, align 8
  %304 = call i32 @R3(i64 %299, i64 %300, i64 %301, i64 %302, i64 %303, i32 45)
  %305 = load i64, i64* %9, align 8
  %306 = load i64, i64* %5, align 8
  %307 = load i64, i64* %6, align 8
  %308 = load i64, i64* %7, align 8
  %309 = load i64, i64* %8, align 8
  %310 = call i32 @R3(i64 %305, i64 %306, i64 %307, i64 %308, i64 %309, i32 46)
  %311 = load i64, i64* %8, align 8
  %312 = load i64, i64* %9, align 8
  %313 = load i64, i64* %5, align 8
  %314 = load i64, i64* %6, align 8
  %315 = load i64, i64* %7, align 8
  %316 = call i32 @R3(i64 %311, i64 %312, i64 %313, i64 %314, i64 %315, i32 47)
  %317 = load i64, i64* %7, align 8
  %318 = load i64, i64* %8, align 8
  %319 = load i64, i64* %9, align 8
  %320 = load i64, i64* %5, align 8
  %321 = load i64, i64* %6, align 8
  %322 = call i32 @R3(i64 %317, i64 %318, i64 %319, i64 %320, i64 %321, i32 48)
  %323 = load i64, i64* %6, align 8
  %324 = load i64, i64* %7, align 8
  %325 = load i64, i64* %8, align 8
  %326 = load i64, i64* %9, align 8
  %327 = load i64, i64* %5, align 8
  %328 = call i32 @R3(i64 %323, i64 %324, i64 %325, i64 %326, i64 %327, i32 49)
  %329 = load i64, i64* %5, align 8
  %330 = load i64, i64* %6, align 8
  %331 = load i64, i64* %7, align 8
  %332 = load i64, i64* %8, align 8
  %333 = load i64, i64* %9, align 8
  %334 = call i32 @R3(i64 %329, i64 %330, i64 %331, i64 %332, i64 %333, i32 50)
  %335 = load i64, i64* %9, align 8
  %336 = load i64, i64* %5, align 8
  %337 = load i64, i64* %6, align 8
  %338 = load i64, i64* %7, align 8
  %339 = load i64, i64* %8, align 8
  %340 = call i32 @R3(i64 %335, i64 %336, i64 %337, i64 %338, i64 %339, i32 51)
  %341 = load i64, i64* %8, align 8
  %342 = load i64, i64* %9, align 8
  %343 = load i64, i64* %5, align 8
  %344 = load i64, i64* %6, align 8
  %345 = load i64, i64* %7, align 8
  %346 = call i32 @R3(i64 %341, i64 %342, i64 %343, i64 %344, i64 %345, i32 52)
  %347 = load i64, i64* %7, align 8
  %348 = load i64, i64* %8, align 8
  %349 = load i64, i64* %9, align 8
  %350 = load i64, i64* %5, align 8
  %351 = load i64, i64* %6, align 8
  %352 = call i32 @R3(i64 %347, i64 %348, i64 %349, i64 %350, i64 %351, i32 53)
  %353 = load i64, i64* %6, align 8
  %354 = load i64, i64* %7, align 8
  %355 = load i64, i64* %8, align 8
  %356 = load i64, i64* %9, align 8
  %357 = load i64, i64* %5, align 8
  %358 = call i32 @R3(i64 %353, i64 %354, i64 %355, i64 %356, i64 %357, i32 54)
  %359 = load i64, i64* %5, align 8
  %360 = load i64, i64* %6, align 8
  %361 = load i64, i64* %7, align 8
  %362 = load i64, i64* %8, align 8
  %363 = load i64, i64* %9, align 8
  %364 = call i32 @R3(i64 %359, i64 %360, i64 %361, i64 %362, i64 %363, i32 55)
  %365 = load i64, i64* %9, align 8
  %366 = load i64, i64* %5, align 8
  %367 = load i64, i64* %6, align 8
  %368 = load i64, i64* %7, align 8
  %369 = load i64, i64* %8, align 8
  %370 = call i32 @R3(i64 %365, i64 %366, i64 %367, i64 %368, i64 %369, i32 56)
  %371 = load i64, i64* %8, align 8
  %372 = load i64, i64* %9, align 8
  %373 = load i64, i64* %5, align 8
  %374 = load i64, i64* %6, align 8
  %375 = load i64, i64* %7, align 8
  %376 = call i32 @R3(i64 %371, i64 %372, i64 %373, i64 %374, i64 %375, i32 57)
  %377 = load i64, i64* %7, align 8
  %378 = load i64, i64* %8, align 8
  %379 = load i64, i64* %9, align 8
  %380 = load i64, i64* %5, align 8
  %381 = load i64, i64* %6, align 8
  %382 = call i32 @R3(i64 %377, i64 %378, i64 %379, i64 %380, i64 %381, i32 58)
  %383 = load i64, i64* %6, align 8
  %384 = load i64, i64* %7, align 8
  %385 = load i64, i64* %8, align 8
  %386 = load i64, i64* %9, align 8
  %387 = load i64, i64* %5, align 8
  %388 = call i32 @R3(i64 %383, i64 %384, i64 %385, i64 %386, i64 %387, i32 59)
  %389 = load i64, i64* %5, align 8
  %390 = load i64, i64* %6, align 8
  %391 = load i64, i64* %7, align 8
  %392 = load i64, i64* %8, align 8
  %393 = load i64, i64* %9, align 8
  %394 = call i32 @R4(i64 %389, i64 %390, i64 %391, i64 %392, i64 %393, i32 60)
  %395 = load i64, i64* %9, align 8
  %396 = load i64, i64* %5, align 8
  %397 = load i64, i64* %6, align 8
  %398 = load i64, i64* %7, align 8
  %399 = load i64, i64* %8, align 8
  %400 = call i32 @R4(i64 %395, i64 %396, i64 %397, i64 %398, i64 %399, i32 61)
  %401 = load i64, i64* %8, align 8
  %402 = load i64, i64* %9, align 8
  %403 = load i64, i64* %5, align 8
  %404 = load i64, i64* %6, align 8
  %405 = load i64, i64* %7, align 8
  %406 = call i32 @R4(i64 %401, i64 %402, i64 %403, i64 %404, i64 %405, i32 62)
  %407 = load i64, i64* %7, align 8
  %408 = load i64, i64* %8, align 8
  %409 = load i64, i64* %9, align 8
  %410 = load i64, i64* %5, align 8
  %411 = load i64, i64* %6, align 8
  %412 = call i32 @R4(i64 %407, i64 %408, i64 %409, i64 %410, i64 %411, i32 63)
  %413 = load i64, i64* %6, align 8
  %414 = load i64, i64* %7, align 8
  %415 = load i64, i64* %8, align 8
  %416 = load i64, i64* %9, align 8
  %417 = load i64, i64* %5, align 8
  %418 = call i32 @R4(i64 %413, i64 %414, i64 %415, i64 %416, i64 %417, i32 64)
  %419 = load i64, i64* %5, align 8
  %420 = load i64, i64* %6, align 8
  %421 = load i64, i64* %7, align 8
  %422 = load i64, i64* %8, align 8
  %423 = load i64, i64* %9, align 8
  %424 = call i32 @R4(i64 %419, i64 %420, i64 %421, i64 %422, i64 %423, i32 65)
  %425 = load i64, i64* %9, align 8
  %426 = load i64, i64* %5, align 8
  %427 = load i64, i64* %6, align 8
  %428 = load i64, i64* %7, align 8
  %429 = load i64, i64* %8, align 8
  %430 = call i32 @R4(i64 %425, i64 %426, i64 %427, i64 %428, i64 %429, i32 66)
  %431 = load i64, i64* %8, align 8
  %432 = load i64, i64* %9, align 8
  %433 = load i64, i64* %5, align 8
  %434 = load i64, i64* %6, align 8
  %435 = load i64, i64* %7, align 8
  %436 = call i32 @R4(i64 %431, i64 %432, i64 %433, i64 %434, i64 %435, i32 67)
  %437 = load i64, i64* %7, align 8
  %438 = load i64, i64* %8, align 8
  %439 = load i64, i64* %9, align 8
  %440 = load i64, i64* %5, align 8
  %441 = load i64, i64* %6, align 8
  %442 = call i32 @R4(i64 %437, i64 %438, i64 %439, i64 %440, i64 %441, i32 68)
  %443 = load i64, i64* %6, align 8
  %444 = load i64, i64* %7, align 8
  %445 = load i64, i64* %8, align 8
  %446 = load i64, i64* %9, align 8
  %447 = load i64, i64* %5, align 8
  %448 = call i32 @R4(i64 %443, i64 %444, i64 %445, i64 %446, i64 %447, i32 69)
  %449 = load i64, i64* %5, align 8
  %450 = load i64, i64* %6, align 8
  %451 = load i64, i64* %7, align 8
  %452 = load i64, i64* %8, align 8
  %453 = load i64, i64* %9, align 8
  %454 = call i32 @R4(i64 %449, i64 %450, i64 %451, i64 %452, i64 %453, i32 70)
  %455 = load i64, i64* %9, align 8
  %456 = load i64, i64* %5, align 8
  %457 = load i64, i64* %6, align 8
  %458 = load i64, i64* %7, align 8
  %459 = load i64, i64* %8, align 8
  %460 = call i32 @R4(i64 %455, i64 %456, i64 %457, i64 %458, i64 %459, i32 71)
  %461 = load i64, i64* %8, align 8
  %462 = load i64, i64* %9, align 8
  %463 = load i64, i64* %5, align 8
  %464 = load i64, i64* %6, align 8
  %465 = load i64, i64* %7, align 8
  %466 = call i32 @R4(i64 %461, i64 %462, i64 %463, i64 %464, i64 %465, i32 72)
  %467 = load i64, i64* %7, align 8
  %468 = load i64, i64* %8, align 8
  %469 = load i64, i64* %9, align 8
  %470 = load i64, i64* %5, align 8
  %471 = load i64, i64* %6, align 8
  %472 = call i32 @R4(i64 %467, i64 %468, i64 %469, i64 %470, i64 %471, i32 73)
  %473 = load i64, i64* %6, align 8
  %474 = load i64, i64* %7, align 8
  %475 = load i64, i64* %8, align 8
  %476 = load i64, i64* %9, align 8
  %477 = load i64, i64* %5, align 8
  %478 = call i32 @R4(i64 %473, i64 %474, i64 %475, i64 %476, i64 %477, i32 74)
  %479 = load i64, i64* %5, align 8
  %480 = load i64, i64* %6, align 8
  %481 = load i64, i64* %7, align 8
  %482 = load i64, i64* %8, align 8
  %483 = load i64, i64* %9, align 8
  %484 = call i32 @R4(i64 %479, i64 %480, i64 %481, i64 %482, i64 %483, i32 75)
  %485 = load i64, i64* %9, align 8
  %486 = load i64, i64* %5, align 8
  %487 = load i64, i64* %6, align 8
  %488 = load i64, i64* %7, align 8
  %489 = load i64, i64* %8, align 8
  %490 = call i32 @R4(i64 %485, i64 %486, i64 %487, i64 %488, i64 %489, i32 76)
  %491 = load i64, i64* %8, align 8
  %492 = load i64, i64* %9, align 8
  %493 = load i64, i64* %5, align 8
  %494 = load i64, i64* %6, align 8
  %495 = load i64, i64* %7, align 8
  %496 = call i32 @R4(i64 %491, i64 %492, i64 %493, i64 %494, i64 %495, i32 77)
  %497 = load i64, i64* %7, align 8
  %498 = load i64, i64* %8, align 8
  %499 = load i64, i64* %9, align 8
  %500 = load i64, i64* %5, align 8
  %501 = load i64, i64* %6, align 8
  %502 = call i32 @R4(i64 %497, i64 %498, i64 %499, i64 %500, i64 %501, i32 78)
  %503 = load i64, i64* %6, align 8
  %504 = load i64, i64* %7, align 8
  %505 = load i64, i64* %8, align 8
  %506 = load i64, i64* %9, align 8
  %507 = load i64, i64* %5, align 8
  %508 = call i32 @R4(i64 %503, i64 %504, i64 %505, i64 %506, i64 %507, i32 79)
  %509 = load i64, i64* %5, align 8
  %510 = load i64*, i64** %3, align 8
  %511 = getelementptr inbounds i64, i64* %510, i64 0
  %512 = load i64, i64* %511, align 8
  %513 = add nsw i64 %512, %509
  store i64 %513, i64* %511, align 8
  %514 = load i64, i64* %6, align 8
  %515 = load i64*, i64** %3, align 8
  %516 = getelementptr inbounds i64, i64* %515, i64 1
  %517 = load i64, i64* %516, align 8
  %518 = add nsw i64 %517, %514
  store i64 %518, i64* %516, align 8
  %519 = load i64, i64* %7, align 8
  %520 = load i64*, i64** %3, align 8
  %521 = getelementptr inbounds i64, i64* %520, i64 2
  %522 = load i64, i64* %521, align 8
  %523 = add nsw i64 %522, %519
  store i64 %523, i64* %521, align 8
  %524 = load i64, i64* %8, align 8
  %525 = load i64*, i64** %3, align 8
  %526 = getelementptr inbounds i64, i64* %525, i64 3
  %527 = load i64, i64* %526, align 8
  %528 = add nsw i64 %527, %524
  store i64 %528, i64* %526, align 8
  %529 = load i64, i64* %9, align 8
  %530 = load i64*, i64** %3, align 8
  %531 = getelementptr inbounds i64, i64* %530, i64 4
  %532 = load i64, i64* %531, align 8
  %533 = add nsw i64 %532, %529
  store i64 %533, i64* %531, align 8
  %534 = getelementptr inbounds [1 x %union.char64long16], [1 x %union.char64long16]* %10, i64 0, i64 0
  %535 = call i32 @memset(%union.char64long16* %534, i32 0, i32 4)
  store i64 0, i64* %9, align 8
  store i64 0, i64* %8, align 8
  store i64 0, i64* %7, align 8
  store i64 0, i64* %6, align 8
  store i64 0, i64* %5, align 8
  %536 = load i64, i64* %5, align 8
  %537 = load i64, i64* %6, align 8
  %538 = load i64, i64* %7, align 8
  %539 = load i64, i64* %8, align 8
  %540 = load i64, i64* %9, align 8
  ret void
}

declare dso_local i32 @memcpy(%union.char64long16*, i8*, i32) #1

declare dso_local i32 @R0(i64, i64, i64, i64, i64, i32) #1

declare dso_local i32 @R1(i64, i64, i64, i64, i64, i32) #1

declare dso_local i32 @R2(i64, i64, i64, i64, i64, i32) #1

declare dso_local i32 @R3(i64, i64, i64, i64, i64, i32) #1

declare dso_local i32 @R4(i64, i64, i64, i64, i64, i32) #1

declare dso_local i32 @memset(%union.char64long16*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
